# physical-ai-course-book

./: .env.template  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
docs/: docusaurus.config.js  package.json  sidebars.js
docs/01-robot-nervous-system/: 01-ros2-fundamentals.md  02-rclpy-bridge.md  03-urdf-humanoids.md  _category_.json
docs/docs/: developer-guide.md  intro.md
docs/docs/api/: data-models.md  interfaces.md  overview.md  ros-actions.md
docs/docs/architecture/: cognition-layer.md  execution-layer.md  overview.md  sequence-flow.md  voice-layer.md
docs/docs/tutorials/: first-command.md  installation.md  multi-step-task.md  troubleshooting.md
history/adr/: 0001-digital-twin-architecture-gazebo-unity-integration.adr.md
history/prompts/001-isaac-robot-brain/: 001-module-3-ai-robot-brain-specification.spec.prompt.md
history/prompts/constitution/: 0001-update-project-constitution-with-initial-principles.constitution.prompt.md
history/prompts/digital-twin-simulation/: 0001-module-2-digital-twin-spec.spec.prompt.md  0006-generate-technical-plan-for-module-2.plan.prompt.md  0007-document-digital-twin-architecture-adr.adr.prompt.md  0008-generate-atomic-task-list-for-module-2.tasks.prompt.md
history/prompts/ros2-robot-nervous-system/: 0002-generate-technical-plan-for-module-1.plan.prompt.md  0004-generate-concise-technical-plan-for-module-1.plan.prompt.md  0005-generate-atomic-task-list-for-module-1.tasks.prompt.md
history/prompts/vla-integration/: 001-vla-integration-specification.spec.prompt.md  002-vla-technical-plan.plan.prompt.md  003-vla-task-breakdown.tasks.prompt.md
specs/001-digital-twin-simulation/: plan.md  spec.md  tasks.md
specs/001-digital-twin-simulation/checklists/: requirements.md
specs/001-isaac-robot-brain/: plan.md  research.md  spec.md  tasks.md
specs/001-isaac-robot-brain/checklists/: requirements.md
specs/001-ros2-robot-nervous-system/: plan.md  spec.md  tasks.md
specs/001-ros2-robot-nervous-system/checklists/: requirements.md
specs/001-vla-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vla-integration/checklists/: requirements.md
specs/001-vla-integration/contracts/: NavigateToPoint.action  PlaceObject.action  README.md  python_interfaces.py
src/: __init__.py
src/01-robot-nervous-system/ros2_package_boilerplate/: package.xml  setup.py
src/cli/: __init__.py  vla_cli.py
src/simulation/launch/: humanoid_sim.launch.py
src/simulation/robot_description/: humanoid.urdf
src/simulation/worlds/: household_world.sdf
src/vla_core/: __init__.py
src/vla_core/cognition/: __init__.py  action_planner.py  intent_parser.py  llm_client.py  plan_validator.py
src/vla_core/contracts/: __init__.py  interfaces.py
src/vla_core/execution/: __init__.py  action_service.py  execution_monitor.py  ros_action_helpers.py  ros_interface.py
src/vla_core/pipeline/: __init__.py  state_manager.py  vla_pipeline.py
src/vla_core/utils/: __init__.py  config.py  errors.py  logging_config.py
src/vla_core/voice/: __init__.py  audio_capture.py  transcription.py  voice_interface.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_models.py
tests/unit/test_cognition/: __init__.py  test_plan_validator.py
tests/unit/test_voice/: __init__.py  test_voice_interface.py
vla_ws/src/vla_action_servers/: README.md  package.xml  setup.cfg  setup.py
vla_ws/src/vla_interfaces/: CMakeLists.txt  package.xml
vla_ws/src/vla_interfaces/action/: InspectObject.action  PickObject.action
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/01-robot-nervous-system/: 01-ros2-fundamentals.md  02-rclpy-bridge.md  03-urdf-humanoids.md
website/docs/02-digital-twin-simulation/: 01-simulation-engines.md  02-gazebo-physics.md  03-unity-hri.md  04-simulated-sensors.md
website/docs/03-isaac-robot-brain/: 01-isaac-sim-setup.md  02-isaac-ros-vslam.md  03-nav2-integration.md  04-autonomous-navigation.md
website/docs/04-vla-integration/: 01-voice-interface.md  02-cognitive-planning.md  03-python-execution.md  04-end-to-end-pipeline.md  05-ros-extension.md
(+12 files in other folders)
